Updated description, started first post.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Rovani Projects
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Chicago
+description: Operations and Information Services Consultants
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/37058145
