--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
-assets: /assets
+images: /assets/images
 
 #
 # !! You don't need to change any of the configuration flags below !!
