--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ images: /assets/images
 
 permalink: /:title/
 paginate: 7
-excerpt_separator: "\n"
+excerpt_separator: "\n\n"
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
